--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 #datasource url
-spring.datasource.url=jdbc:mysql://localhost:3306/pokedex
+#spring.datasource.url=jdbc:mysql://localhost:3306/pokedex
